--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "angular-checklist": "^1.2.3",
-    "angular-fullpage.js": "^0.2.6"
+    "angular-fullpage.js": "^0.2.6",
+    "repeat-string": "^1.6.1"
   }
 }
